--- a/index.html
+++ b/index.html
@@ -208,6 +208,40 @@
     #intro-text:hover {
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
+    @media only screen and (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 1rem;
+      }
+      nav {
+        flex-direction: column;
+        gap: 0.5rem;
+      }
+      nav a {
+        font-size: 1rem;
+        padding: 0.25rem;
+      }
+      #intro-text {
+        font-size: 2.2rem;
+      }
+      .terminal {
+        width: 95%;
+        font-size: 0.9rem;
+      }
+      #role-text {
+        flex-direction: column;
+        gap: 1rem;
+      }
+      .phrase-box {
+        width: 56px;
+        height: 56px;
+      }
+      .phrase-box img {
+        width: 28px;
+        height: 28px;
+      }
+    }
 </style>
 </head>
 <body>
