--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  #role-text {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
       header {
         flex-direction: column;
         align-items: flex-start;
