--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@
     }
     @media only screen and (max-width: 600px) {
   #role-text {
+    flex-direction: row !important;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+  }
+  #role-text {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -235,9 +241,8 @@
         font-size: 0.9rem;
       }
       #role-text {
-        flex-direction: column;
-        gap: 1rem;
-      }
+  gap: 1rem;
+}
       .phrase-box {
         width: 56px;
         height: 56px;
