--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  .hero {
+    padding: 2rem 1rem 0.5rem;
+  }
+  header {
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+  }
   #role-text {
     flex-direction: row !important;
     flex-wrap: wrap;
