--- a/index.html
+++ b/index.html
@@ -210,6 +210,13 @@
     }
     @media only screen and (max-width: 600px) {
   .hero {
+    padding: 1rem 1rem 0.5rem;
+  }
+  header {
+    padding: 0.5rem 1rem;
+    gap: 0.25rem;
+  }
+  .hero {
     padding: 2rem 1rem 0.5rem;
   }
   header {
