--- a/index.html
+++ b/index.html
@@ -210,6 +210,23 @@
     }
     @media only screen and (max-width: 600px) {
   .hero {
+    padding: 0.5rem 1rem 0.5rem;
+  }
+  header {
+    padding: 0.25rem 1rem;
+    gap: 0.2rem;
+  }
+  nav {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.75rem;
+    margin-top: 0.5rem;
+  }
+  nav a {
+    font-size: 1rem;
+    padding: 0.2rem 0.4rem;
+  }
+  .hero {
     padding: 1rem 1rem 0.5rem;
   }
   header {
