--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
       gap: 1.5rem;
     }
     nav a {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+
       font-size: 1.2rem;
       padding: 0.25rem 0.5rem;
       border-radius: 4px;
@@ -209,6 +211,12 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  nav a {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    padding-bottom: 0.4rem;
+    margin-bottom: 0.2rem;
+  }
+
   .hero {
     padding: 0.5rem 1rem 0.5rem;
   }
