--- a/index.html
+++ b/index.html
@@ -211,6 +211,29 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+  nav {
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
+    justify-content: center !important;
+    align-items: center;
+    gap: 0.5rem !important;
+    margin-top: 0.5rem;
+  }
+  nav a {
+    border-bottom: none !important;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 6px;
+    padding: 0.4rem 0.8rem;
+    font-size: 0.9rem;
+    background-color: rgba(255, 255, 255, 0.05);
+    display: inline-block;
+    white-space: nowrap;
+  }
   nav {
     display: flex;
     flex-direction: row;
