--- a/index.html
+++ b/index.html
@@ -211,6 +211,10 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  nav a {
+    font-size: 0.8rem;
+    padding: 0.2rem 0.5rem;
+  }
   header {
     flex-direction: column;
     align-items: center;
