--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
     }
     @media only screen and (max-width: 600px) {
   nav a {
+    font-size: 0.7rem;
+    padding: 0.15rem 0.4rem;
+  }
+  nav a {
     font-size: 0.8rem;
     padding: 0.2rem 0.5rem;
   }
