--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
     }
     @media only screen and (max-width: 600px) {
   nav a {
+    font-size: 0.85rem;
+    padding: 0.2rem 0.4rem;
+    border-radius: 6px;
+  }
+  nav {
+    gap: 0.4rem;
+    justify-content: center;
+  }
+  nav a {
     font-size: 0.7rem;
     padding: 0.15rem 0.4rem;
   }
