--- a/index.html
+++ b/index.html
@@ -211,6 +211,24 @@
       text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
     }
     @media only screen and (max-width: 600px) {
+  nav {
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+    overflow-x: auto;
+    white-space: nowrap;
+    scrollbar-width: none;
+  }
+  nav::-webkit-scrollbar {
+    display: none;
+  }
+  nav a {
+    flex: 0 0 auto;
+    font-size: 0.8rem;
+    padding: 0.2rem 0.6rem;
+    margin: 0;
+    white-space: nowrap;
+  }
   nav a {
     font-size: 0.85rem;
     padding: 0.2rem 0.4rem;
