--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jonathan Pedrero</title>
-  <style>
+    <style>
     :root {
       --primary: #000;
       --accent: #222;
@@ -48,8 +48,7 @@
       gap: 1.5rem;
     }
     nav a {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       font-size: 1.2rem;
       padding: 0.25rem 0.5rem;
       border-radius: 4px;
@@ -174,214 +173,10 @@
     @keyframes slideUp {
       to { transform: translateY(0); }
     }
-    @media (max-width: 768px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
-      }
-      nav {
-        flex-wrap: wrap;
-        margin-top: 1rem;
-      }
-      .terminal {
-        width: 90%;
-        max-width: 460px;
-      }
-      #role-text {
-        gap: 1rem;
-      }
-    }
-    .cursor.small { font-size: 1rem; vertical-align: baseline; }
-      .under-construction {
-      font-size: 2rem;
-      font-weight: bold;
-      color: #cc0000;
-      transition: transform 0.4s ease, text-shadow 0.4s ease;
-    }
-    .under-construction:hover {
-      transform: scale(1.1);
-      text-shadow: 0 0 10px #ffaa00, 0 0 20px #ffaa00;
-    }
-    section {
-      transition: opacity 0.5s ease-in-out;
-    }
-    
-    #intro-text:hover {
-      text-shadow: 0 0 10px rgba(100, 100, 100, 0.3), 0 0 20px rgba(100, 100, 100, 0.2), 0 0 30px rgba(100, 100, 100, 0.15);
-    }
-    @media only screen and (max-width: 600px) {
-  nav {
-    flex-wrap: nowrap !important;
-    justify-content: center !important;
-    overflow-x: auto;
-    white-space: nowrap;
-    gap: 0.4rem !important;
-  }
-  nav::-webkit-scrollbar {
-    display: none;
-  }
-  nav a {
-    flex: 0 0 auto;
-    font-size: 0.75rem;
-    padding: 0.3rem 0.6rem;
-    border-radius: 6px;
-    white-space: nowrap;
-  }
-  nav {
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
-    overflow-x: auto;
-    white-space: nowrap;
-    scrollbar-width: none;
-  }
-  nav::-webkit-scrollbar {
-    display: none;
-  }
-  nav a {
-    flex: 0 0 auto;
-    font-size: 0.8rem;
-    padding: 0.2rem 0.6rem;
-    margin: 0;
-    white-space: nowrap;
-  }
-  nav a {
-    font-size: 0.85rem;
-    padding: 0.2rem 0.4rem;
-    border-radius: 6px;
-  }
-  nav {
-    gap: 0.4rem;
-    justify-content: center;
-  }
-  nav a {
-    font-size: 0.7rem;
-    padding: 0.15rem 0.4rem;
-  }
-  nav a {
-    font-size: 0.8rem;
-    padding: 0.2rem 0.5rem;
-  }
-  header {
-    flex-direction: column;
-    align-items: center;
-  }
-  nav {
-    display: flex !important;
-    flex-direction: row !important;
-    flex-wrap: wrap !important;
-    justify-content: center !important;
-    align-items: center;
-    gap: 0.5rem !important;
-    margin-top: 0.5rem;
-  }
-  nav a {
-    border-bottom: none !important;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 6px;
-    padding: 0.4rem 0.8rem;
-    font-size: 0.9rem;
-    background-color: rgba(255, 255, 255, 0.05);
-    display: inline-block;
-    white-space: nowrap;
-  }
-  nav {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 0.5rem;
-  }
-  nav a {
-    border-bottom: none;
-    border: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 6px;
-    padding: 0.4rem 0.8rem;
-    font-size: 0.9rem;
-    background-color: rgba(255, 255, 255, 0.05);
-  }
-  nav a {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
-    padding-bottom: 0.4rem;
-    margin-bottom: 0.2rem;
-  }
-
-  .hero {
-    padding: 0.5rem 1rem 0.5rem;
-  }
-  header {
-    padding: 0.25rem 1rem;
-    gap: 0.2rem;
-  }
-  nav {
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 0.75rem;
-    margin-top: 0.5rem;
-  }
-  nav a {
-    font-size: 1rem;
-    padding: 0.2rem 0.4rem;
-  }
-  .hero {
-    padding: 1rem 1rem 0.5rem;
-  }
-  header {
-    padding: 0.5rem 1rem;
-    gap: 0.25rem;
-  }
-  .hero {
-    padding: 2rem 1rem 0.5rem;
-  }
-  header {
-    padding: 0.5rem 1rem;
-    gap: 0.5rem;
-  }
-  #role-text {
-    flex-direction: row !important;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-  }
-  #role-text {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 1rem;
-      }
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-      nav a {
-        font-size: 1rem;
-        padding: 0.25rem;
-      }
-      #intro-text {
-        font-size: 2.2rem;
-      }
-      .terminal {
-        width: 95%;
-        font-size: 0.9rem;
-      }
-      #role-text {
-  gap: 1rem;
-}
-      .phrase-box {
-        width: 56px;
-        height: 56px;
-      }
-      .phrase-box img {
-        width: 28px;
-        height: 28px;
-      }
-    }
-</style>
+  </style>
+  <script>
+    // JavaScript logic will be placed here in the next update
+  </script>
 </head>
 <body>
   <header>
@@ -412,30 +207,24 @@ jonathanpedrero@website ~ % <span id="terminal-typewriter"></span><span class="c
     <div id="role-text"></div>
     <div style="height: 2rem;"></div>
   </section>
-
-<section id="about" style="display: none; text-align: center; padding: 4rem 2rem;">
-  <h2>About Me</h2>
-  <p class="under-construction">🚧 Under construction 🚧</p>
-</section>
-<section id="education" style="display: none; text-align: center; padding: 4rem 2rem;">
-  <h2>Education</h2>
-  <p class="under-construction">🚧 Under construction 🚧</p>
-</section>
-<section id="experience" style="display: none; text-align: center; padding: 4rem 2rem;">
-  <h2>Experience</h2>
-  <p class="under-construction">🚧 Under construction 🚧</p>
-</section>
-<section id="skills" style="display: none; text-align: center; padding: 4rem 2rem;">
-  <h2>Skills</h2>
-  <p class="under-construction">🚧 Under construction 🚧</p>
-</section>
-
-<footer>
+  <section id="about" style="display: none; text-align: center; padding: 4rem 2rem;">
+    <h2>About Me</h2>
+    <p class="under-construction">🚧 Under construction 🚧</p>
+  </section>
+  <section id="education" style="display: none; text-align: center; padding: 4rem 2rem;">
+    <h2>Education</h2>
+    <p class="under-construction">🚧 Under construction 🚧</p>
+  </section>
+  <section id="experience" style="display: none; text-align: center; padding: 4rem 2rem;">
+    <h2>Experience</h2>
+    <p class="under-construction">🚧 Under construction 🚧</p>
+  </section>
+  <section id="skills" style="display: none; text-align: center; padding: 4rem 2rem;">
+    <h2>Skills</h2>
+    <p class="under-construction">🚧 Under construction 🚧</p>
+  </section>
+  <footer>
     &copy; 2025 Jonathan Pedrero. All rights reserved.
-  </footer>
-
-  
-
   </footer>
   <script>
     const headerFooterDelay = 2600;
