--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
         <span class="green"></span>
       </div>
       <div class="output">
-Last login: Tue May 6, 2025 #last website update
-jonathanpedrero@website ~ % <span id="terminal-typewriter"></span><span class="cursor small">|</span>
+Last update: Tue May 6, 2025<br>
+<span id="terminal-typewriter"></span><span class="cursor small">|</span>
       </div>
     </div>
     <div class="divider"></div>
