--- a/index.html
+++ b/index.html
@@ -231,6 +231,15 @@
       height: 0.5rem;
     }
   }
+.cursor.small {
+  font-size: 1rem;
+  vertical-align: baseline;
+  color: #00FF00;
+  animation: blink 1s step-end infinite;
+}
+@keyframes blink {
+  50% { opacity: 0; }
+}
 </style>
   <script>
     // JavaScript logic will be placed here in the next update
