--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Raleway:wght@400;600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jonathan Pedrero</title>
@@ -68,12 +68,13 @@
       transform: translateY(-2px);
     }
     .hero {
-      padding: 4rem 2rem 0.5rem;
+      padding: 1.5rem 2rem 0.75rem;
       text-align: center;
     }
     #intro-text {
-      font-family: 'Pacifico', cursive;
-      margin-bottom: 0.5rem;
+      font-family: 'Raleway', sans-serif;
+      margin-top: 0.5rem;
+      margin-bottom: 0.25rem;
       font-size: 4.2rem;
       overflow: hidden;
       white-space: nowrap;
@@ -243,6 +244,12 @@
 @keyframes blink {
   50% { opacity: 0; }
 }
+
+
+
+
+
+
 </style>
   
 </head>
@@ -250,7 +257,7 @@
   <header>
     <div style="display: flex; align-items: center; gap: 0.75rem;">
       <img src="JP.png" alt="Jonathan Pedrero headshot" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
-      <h1>Jonathan Pedrero</h1>
+      <h1 id="header-name">Jonathan Pedrero</h1>
     </div>
     <nav>
       <a href="#home">Home</a>
