--- a/index.html
+++ b/index.html
@@ -318,7 +318,11 @@ Last update: Tue May 6, 2025<br>
   <script>
     const headerFooterDelay = 2600;
     const phraseDelay = 500;
-    const terminalText = "Welcome to my personal website! Use the navbar to read about me, education, experience, and skills. Click contacts below to connect.";
+    const terminalText = `Home  🏠 | Introduction & Contact
+About me 🧔🏻‍♂️ | Page Information & Biography
+Education 📝 | College & Certifications
+Experience 💻 | Work History & Achievements
+Skills 🛠️ | Administration & Skillset`;
 
     document.addEventListener('DOMContentLoaded', () => {
       const rotatingText = document.getElementById('rotating-monotext');
