--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Last update: Tue May 6, 2025<br>
   <script>
     const headerFooterDelay = 2600;
     const phraseDelay = 500;
-    const terminalText = `Type tab name & press Enter:
+    const terminalText = `Type tab name & Enter
 Home 🏠
 About Me 🧔🏻‍♂️
 Education 📝
