--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   min-height: 2em;
   opacity: 1;
   position: relative;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 }
 .phrase-box {
   padding: 0.75rem;
@@ -267,7 +267,7 @@
 }
 }
   .mobile-spacer {
-  height: 0.5rem;
+  height: 0;
 }
 
   @media only screen and (max-width: 600px) {
@@ -512,4 +512,3 @@ roleObserver.observe(document.getElementById('terminal-window'));
   }
 });
 </script>
-  
