--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   min-height: 2em;
   opacity: 1;
   position: relative;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 .phrase-box {
   padding: 0.75rem;
@@ -320,7 +320,7 @@ header h1:hover {
       <a href="#skills">Skills</a>
     </nav>
   </header>
-  <section id="home" class="hero" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start; align-items: center; text-align: center; padding: 0.75rem 0 0 0; margin-top: 1.5rem; margin-bottom: 0.25rem;">
+  <section id="home" class="hero" style="min-height: calc(100vh - 160px); display: flex; flex-direction: column; justify-content: space-between; align-items: center; text-align: center; padding: 0.75rem 0 0 0; margin-top: 1.5rem; margin-bottom: 0.25rem;">
     <h2 id="intro-text" style="font-family: 'TT Ramilas', sans-serif; margin-bottom: 0;"></h2>
     <div id="rotating-monotext" style="font-family: monospace; font-size: 1.5rem; text-align: center; opacity: 0; transition: opacity 1s ease-in-out; margin-top: -0.75rem; color: #666"></div>
     <div class="divider"></div>
