--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  scroll-behavior: smooth;}
+  scroll-behavior: smooth;
+}
     header {
   position: fixed;
   top: 0;
@@ -320,7 +321,7 @@ header h1:hover {
       <a href="#skills">Skills</a>
     </nav>
   </header>
-  <section id="home" class="hero" style="height: calc(100vh - 160px); display: flex; flex-direction: column; justify-content: space-between; align-items: center; text-align: center; padding: 0; margin: 0;">
+  <section id="home" class="hero" style="flex: 1 0 auto; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 0; margin: 0;">
     <h2 id="intro-text" style="font-family: 'TT Ramilas', sans-serif; margin-bottom: 0;"></h2>
     <div id="rotating-monotext" style="font-family: monospace; font-size: 1.5rem; text-align: center; opacity: 0; transition: opacity 1s ease-in-out; margin-top: -0.75rem; color: #666"></div>
     <div class="divider"></div>
