--- a/index.html
+++ b/index.html
@@ -201,13 +201,17 @@
     }
     footer {
   text-align: center;
-  padding: 2rem;
+  padding: 1rem;
   background: var(--accent);
   color: white;
   margin-top: auto;
   transform: translateY(100%);
   animation: slideUp 1s ease-out forwards;
-  animation-delay: 2.6s;}
+  animation-delay: 2.6s;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
     @keyframes slideUp {
       to { transform: translateY(0); }
     }
@@ -321,7 +325,7 @@ header h1:hover {
       <a href="#skills">Skills</a>
     </nav>
   </header>
-  <section id="home" class="hero" style="flex: 1 0 auto; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding: 0; margin: 0;">
+  <section id="home" class="hero" style="height: 100vh; display: flex; flex-direction: column; justify-content: flex-start; align-items: center; text-align: center; padding-top: 6vh; padding-bottom: 6vh;">
     <h2 id="intro-text" style="font-family: 'TT Ramilas', sans-serif; margin-bottom: 0;"></h2>
     <div id="rotating-monotext" style="font-family: monospace; font-size: 1.5rem; text-align: center; opacity: 0; transition: opacity 1s ease-in-out; margin-top: -0.75rem; color: #666"></div>
     <div class="divider"></div>
