--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ header h1:hover {
       <a href="#skills">Skills</a>
     </nav>
   </header>
-  <section id="home" class="hero" style="height: calc(100vh - 160px); display: flex; flex-direction: column; justify-content: space-between; align-items: center; text-align: center; padding-top: 1rem; padding-bottom: 1rem;">
+  <section id="home" class="hero" style="height: calc(100vh - 160px); display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; padding-top: 5vh; padding-bottom: 5vh;">
     <h2 id="intro-text" style="font-family: 'TT Ramilas', sans-serif; margin-bottom: 0;"></h2>
     <div id="rotating-monotext" style="font-family: monospace; font-size: 1.5rem; text-align: center; opacity: 0; transition: opacity 1s ease-in-out; margin-top: -0.75rem; color: #666"></div>
     <div class="divider"></div>
