--- a/index.html
+++ b/index.html
@@ -208,9 +208,12 @@
   transform: translateY(100%);
   animation: slideUp 1s ease-out forwards;
   animation-delay: 2.6s;
-  position: relative;
+  position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
+  z-index: 1000;
 }
     @keyframes slideUp {
       to { transform: translateY(0); }
